Version 1.0 alpha: (05 Dec 2004)
	* plugins/weather.pl:
	  - Uses NOAA's new XML current observations instead of the rather
	    brittle METAR for stations in the US. Other stations will still
	    use METAR.

Version 1.0 alpha: (04 Dec 2004)
	* plugins/sqlite-logger.pl:
	  - New plugin! Logs all chat to a SQLite database. Supports
	    %log recap and %log seen commands. Recap is intelligent, only
	    recaps what you actually missed. Seen supports the special
	    phrase 'before that' to look for the previous match. You can
	    also provide one or more of say, action, join, part, quit, kick,
	    mode, topic after the nickname to look up to limit to those
	    events. recap and seen should eventually replace the %recap and
	    %seen plugins.

Version 1.0 alpha: (28 Nov 2004)
	* plugins/tinyurl.pl:
	  - New plugin! Looks for TinyURLs in chat, and announces where
	    they point. No more stealth afiliate links!

Version 1.0 alpha: (02 Nov 2004)
	* plugins/rss.pl:
	  - We now trap XML parse errors so that we don't crash if the parsing
	    of a feed fails completely.

Version 1.0 alpha: (20 Oct 2004)
	* simbot.pl:
	  - Added the ability to connect on non-standard ports.
	* plugins/rss.pl:
	  - Added complaining and bailing if the RSS feed cannot be written
	    to disk.

Version 1.0 alpha: (05 Sep 2004)
	* simbot.pl:
	  - Added command line options --debug and --config to override the
	    default configuration file and debug level for the session.
	  - Added ANSI colors to output messages.

Version 1.0 alpha: (31 Jul 2004)
	* plugins/dice.pl:
	  - Added a %rps command, which makes the bot play the Rock, Paper,
	    Scissors games.

Version 1.0 alpha: (26 Jul 2004)
	* simbot.pl:
	  - Added send_pieces_with_notice to allow large blocks of text to be
	    broken up and sent by notice instead of normal messages.
	* plugins/recap.pl:
	  - If a user leaves and rejoins the channel, recap will attempt to
	    give them all the lines since departing by default until the