@@ -45,13 +45,6 @@ on your way.  If you are unsure how to answer the questions it asks, it is
 generally safe to accept the defaults, which are indicated in square
 brackets after the question, and can be accepted by pressing Enter.
 
-If you want to use the SQLite logging plugin, you will need to create
-its database file. Just run:
-
-    perl ./sqlite-logger-setup.pl
-    
-This only needs to be done once.
-
 Once you have installed the script and customized the configuration to your
 liking, cd to the proper directory and start the bot using the command:
 
